--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +9,18 @@
     <h1>我的网站</h1>
     
     <div>
-        <div style="float: left; width: 200px;">
+        <div>
             <ul>
-                <li><a href="链接2">链接2</a><br><small>说明：自制云手机</small></li>
-                <li><a href="链接2/my-login-site">链接2/my-login-site</a><br><small>说明：自制游戏相关网站导航</small></li>
-                <li><a href="链接1">链接1</a><br><small>说明：2048游戏</small></li>
+                <li><a href="https://wangjihong4452.github.io">https://wangjihong4452.github.io</a></li>
+                <li><a href="https://wangjihong4452.github.io/my-login-site">https://wangjihong4452.github.io/my-login-site</a></li>
+                <li><a href="https://wangjihong4452.github.io/game">https://wangjihong4452.github.io/game</a></li>
             </ul>
+        </div>
+        
+        <div>
+            <p><strong>https://wangjihong4452.github.io</strong> - 说明：自制云手机</p>
+            <p><strong>https://wangjihong4452.github.io/my-login-site</strong> - 说明：自制游戏相关网站导航</p>
+            <p><strong>https://wangjihong4452.github.io/game</strong> - 说明：2048游戏</p>
         </div>
     </div>
 </body>
