--- a/index.html
+++ b/index.html
@@ -234,6 +234,18 @@
     <div class="header">
       <div class="title">LY云手机控制台</div>
       <div class="subtitle">远程设备管理与监控平台</div>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2576884527497195"
+     crossorigin="anonymous"></script>
+<!-- 广告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2576884527497195"
+     data-ad-slot="7670752513"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
 
     <!-- 1. 快速操作区域 -->
